--- a/precios/templates/base.html
+++ b/precios/templates/base.html
@@ -698,11 +698,11 @@ License: For each use you must have a valid license purchased only from above li
 														<!--end::Checkbox-->
 														<!--begin::Description-->
 														<div class="flex-grow-1">
-															<a href="#" class="text-gray-800 text-hover-primary fw-bold fs-6">Nombre1 Apellido1</a>
-															<span class="text-muted fw-semibold d-block">Hace 2 días</span>
+															<a href="#" class="text-gray-800 text-hover-primary fw-bold fs-6">Pantalla A1</a>
+															<span class="text-muted fw-semibold d-block">Pantalla 1</span>
 														</div>
 														<!--end::Description-->
-														<span class="badge badge-light-success fs-8 fw-bold">18Ptos</span>
+														<span class="badge badge-light-primary fs-8 fw-bold">Modificar</span>
 													</div>
 													<!--end:Item-->
 													<!--begin::Item-->
@@ -717,11 +717,11 @@ License: For each use you must have a valid license purchased only from above li
 														<!--end::Checkbox-->
 														<!--begin::Description-->
 														<div class="flex-grow-1">
-															<a href="#" class="text-gray-800 text-hover-primary fw-bold fs-6">Prueba2 Apellido2</a>
-															<span class="text-muted fw-semibold d-block">Hace 2 días</span>
+															<a href="#" class="text-gray-800 text-hover-primary fw-bold fs-6">Pantalla B1</a>
+															<span class="text-muted fw-semibold d-block">Pantalla 2</span>
 														</div>
 														<!--end::Description-->
-														<span class="badge badge-light-primary fs-8 fw-bold">3Ptos</span>
+														<span class="badge badge-light-primary fs-8 fw-bold">Modificar</span>
 													</div>
 													<!--end:Item-->
 													<!--begin::Item-->
