--- a/precios/templates/base.html
+++ b/precios/templates/base.html
@@ -376,9 +376,9 @@ License: For each use you must have a valid license purchased only from above li
 													<!--end::Avatar-->
 													<!--begin::Username-->
 													<div class="d-flex flex-column">
-														<div class="fw-bold d-flex align-items-center fs-5">Userbq
-														<span class="badge badge-light-success fw-bold fs-8 px-2 py-1 ms-2">Barquisimeto</span></div>
-														<a href="#" class="fw-semibold text-muted text-hover-primary fs-7">Rio Lama</a>
+														<div class="fw-bold d-flex align-items-center fs-5">{{ user.username }}
+														<span class="badge badge-light-success fw-bold fs-8 px-2 py-1 ms-2">{{ user.sucursal.nombre }}</span></div>
+														<a href="#" class="fw-semibold text-muted text-hover-primary fs-7">Ciudad</a>
 													</div>
 													<!--end::Username-->
 												</div>
@@ -531,7 +531,7 @@ License: For each use you must have a valid license purchased only from above li
 											<!--begin::Card-->
 											<div class="card card-stretch">
 												<!--begin::Link-->
-												<a href="../../pantallas.html" class="btn btn-flex btn-text-gray-800 btn-icon-gray-400 btn-active-color-primary bg-body flex-column justfiy-content-start align-items-start text-start w-100 p-10">
+												<a href="../../pantallas" class="btn btn-flex btn-text-gray-800 btn-icon-gray-400 btn-active-color-primary bg-body flex-column justfiy-content-start align-items-start text-start w-100 p-10">
 													<i class="ki-duotone ki-abstract-26 fs-2tx mb-5 ms-n1">
 														<span class="path1"></span>
 														<span class="path2"></span>
