--- a/precios/templates/base0.html
+++ b/precios/templates/base0.html
@@ -441,8 +441,8 @@ License: For each use you must have a valid license purchased only from above li
 													<!--begin::Username-->
 													<div class="d-flex flex-column">
 														<div class="fw-bold d-flex align-items-center fs-5">{{ user.username }}
-														<span class="badge badge-light-success fw-bold fs-8 px-2 py-1 ms-2">{{ user.sucursal.nombre }}</span></div>
-														<a href="#" class="fw-semibold text-muted text-hover-primary fs-7">Ciudad</a>
+														<span class="badge badge-light-success fw-bold fs-8 px-2 py-1 ms-2">{{ user.sucursal_id.nombre }}</span></div>
+														<a href="#" class="fw-semibold text-muted text-hover-primary fs-7">{{ user.first_name }} {{ user.last_name }}</a>
 													</div>
 													<!--end::Username-->
 												</div>
