--- a/precios/templates/ver_pantalla.html
+++ b/precios/templates/ver_pantalla.html
@@ -42,7 +42,7 @@
 											<h1>Detalles de pantalla</h1>
 											
                                                 
-												<p>Nombre: {{ pantalla.nombre }}</p>
+												<p>Pantalla: {{ pantalla.nombre }}</p>
 												<p>Descripción: {{ pantalla.descripcion }}</p>
                                                 <p>Tipo de Pantalla: {{ pantalla.tipo }}</p>
                                                 <p>Codigo del Producto: {{ pantalla.id_producto }} {{ producto.descripcion }}</p>
