--- a/precios/static/minitor/style.css
+++ b/precios/static/minitor/style.css
@@ -1,54 +1,53 @@
 .tv-1,
 .tv-1 * {
   box-sizing: border-box;
+  position: relative;
 }
+
 .tv-1 {
   background: #ffffff;
-  height: 720px;
-  position: relative;
-  overflow: hidden;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
 }
+
 .mesa-de-trabajo-1-1 {
-  width: 1280px;
-  height: 737px;
-  position: absolute;
-  left: 0px;
-  top: 0px;
+  width: 100%;
+  height: auto;
   object-fit: cover;
 }
+
 .toall-humedasx-72-pz-very-care {
   color: #000000;
   text-align: left;
   font-family: "Inter-Bold", sans-serif;
-  font-size: 64px;
+  font-size: 4vw;
   font-weight: 700;
   position: absolute;
-  left: 77px;
-  top: 215px;
-  width: 789px;
-  height: 124px;
+  top: 32%;
+  left: 5%;
+  right: 23%;
 }
+
 .ref-precio-x-und {
   color: #000000;
-  text-align: left;
-  font-family: "IstokWeb-Bold", sans-serif;
-  font-size: 54px;
-  font-weight: 700;
-  position: absolute;
-  left: 234px;
-  top: 387px;
-  width: 615px;
-  height: 68px;
+    text-align: left;
+    font-family: "IstokWeb-Bold", sans-serif;
+    font-size: 2.9vw;
+    font-weight: 700;
+    position: absolute;
+    top: 51%;
+    left: 10%;
 }
+
 ._1-44 {
   color: #000000;
-  text-align: left;
-  font-family: "PassionOne-Bold", sans-serif;
-  font-size: 235px;
-  font-weight: 700;
-  position: absolute;
-  left: 181px;
-  top: 430px;
-  width: 721px;
-  height: 205px;
+    text-align: left;
+    font-family: "PassionOne-Bold", sans-serif;
+    font-size: 16vw;
+    font-weight: 700;
+    position: absolute;
+    bottom: 15%;
+    left: 10%;
 }
