--- a/precios/templates/pantallas.html
+++ b/precios/templates/pantallas.html
@@ -57,7 +57,7 @@
 											<table>
 												<tr>
 													<th>Id</th>
-													<th>Nombre</th>
+													<th>Pantalla</th>
 													<th>Descripción</th>
 													<th>Tipo</th>
 													<th>Código de Producto</th>
