--- a/precios/static/minitor/style2.css
+++ b/precios/static/minitor/style2.css
@@ -45,7 +45,7 @@ body {
 
   
   position: absolute;
-  left: 962px;
+  left: 62%;
   top: 269px;
   z-index: 9991;
 }
@@ -60,7 +60,7 @@ input{
   width: 149px;
   height: 38px;
   position: absolute;
-  left: 998px;
+  left: 62%;
   top: 304px;
   object-fit: cover;
 }
@@ -71,7 +71,7 @@ input{
   font-size: 40px;
   font-weight: 700;
   position: absolute;
-  left: 193px;
+  left: 28%;
   top: 480px;
   width: 1044px;
   height: 146px;
@@ -83,7 +83,7 @@ input{
   font-size: 40px;
   font-weight: 400;
   position: absolute;
-  left: 150px;
+  left: 24%;
   top: 269px;
   width: 1044px;
   height: 91px;
@@ -95,7 +95,7 @@ input{
   font-size: 32px;
   font-weight: 700;
   position: absolute;
-  left: 260px;
+  left: 32%;
   top: 730px;
   width: 289px;
   height: 92px;
@@ -107,7 +107,7 @@ input{
   font-size: 20px;
   font-weight: 700;
   position: absolute;
-  left: 250px;
+  left: 32%;
   top: 696px;
   width: 309px;
   height: 23px;
@@ -119,7 +119,7 @@ input{
   font-size: 20px;
   font-weight: 700;
   position: absolute;
-  left: 250px;
+  left: 27%;
   top: 386px;
   width: 309px;
   height: 23px;
@@ -131,7 +131,7 @@ input{
   font-size: 20px;
   font-weight: 700;
   position: absolute;
-  left: 250px;
+  left: 27%;
   top: 416px;
   width: 309px;
   height: 23px;
@@ -145,7 +145,7 @@ input{
   width: 309px;
   height: 138px;
   position: absolute;
-  left: 250px;
+  left: 32%;
   top: 672px;
 }
 .bs-999-999-99 {
@@ -155,7 +155,7 @@ input{
   font-size: 32px;
   font-weight: 700;
   position: absolute;
-  left: 836px;
+  left: 55%;
   top: 730px;
   width: 289px;
   height: 92px;
@@ -167,7 +167,7 @@ input{
   font-size: 20px;
   font-weight: 700;
   position: absolute;
-  left: 826px;
+  left: 55%;
   top: 696px;
   width: 309px;
   height: 23px;
@@ -181,6 +181,6 @@ input{
   width: 309px;
   height: 138px;
   position: absolute;
-  left: 826px;
+  left: 55%;
   top: 672px;
 }
