--- a/precios/static/minitor/style2.css
+++ b/precios/static/minitor/style2.css
@@ -71,7 +71,7 @@ input{
   font-size: 40px;
   font-weight: 700;
   position: absolute;
-  left: 28%;
+  left: 21%;
   top: 480px;
   width: 1044px;
   height: 146px;
@@ -83,7 +83,7 @@ input{
   font-size: 40px;
   font-weight: 400;
   position: absolute;
-  left: 24%;
+  left: 16%;
   top: 269px;
   width: 1044px;
   height: 91px;
@@ -95,7 +95,7 @@ input{
   font-size: 32px;
   font-weight: 700;
   position: absolute;
-  left: 32%;
+  left: 26%;
   top: 730px;
   width: 289px;
   height: 92px;
@@ -107,7 +107,7 @@ input{
   font-size: 20px;
   font-weight: 700;
   position: absolute;
-  left: 32%;
+  left: 26%;
   top: 696px;
   width: 309px;
   height: 23px;
@@ -145,7 +145,7 @@ input{
   width: 309px;
   height: 138px;
   position: absolute;
-  left: 32%;
+  left: 26%;
   top: 672px;
 }
 .bs-999-999-99 {
@@ -183,4 +183,17 @@ input{
   position: absolute;
   left: 55%;
   top: 672px;
+}
+
+p{
+  color: #000000;
+  text-align: center;
+  font-family: "Jura-Regular", sans-serif;
+  font-size: 32px;
+  font-weight: 400;
+  position: absolute;
+  left: 25%;
+  top: 479px;
+  width: 648px;
+  height: 91px;
 }
