--- a/precios/templates/validador_precios_vina.html
+++ b/precios/templates/validador_precios_vina.html
@@ -72,7 +72,7 @@
       </div>
       
       
-      <div class="_999-99">$ {{ producto.pvp_base }}</div>
+      <div class="_999-99">$ {{ pvp_base }}</div>
       <div class="precio-usd">Precio USD ($)</div>
       <div class="codigo-c-00000090">{{ producto.codigo }}</div>
       <div class="marca-okf">Marca: {{ producto.marca }}</div>
