--- a/precios/templates/validador_precios_vina.html
+++ b/precios/templates/validador_precios_vina.html
@@ -54,6 +54,7 @@
         src="{% static 'minitor/black-weekend-redvital-makro-10.png' %}"
       />
       <div class="rectangle-1"></div>
+      <div class="banner"><img class="img-banner" src="/static/minitor/formato-pantalla.jpg"></div>
       <div class="rectangle-2"><form method="post">
         <form method="post" id="barcode-form">
           {% csrf_token %}
