--- a/precios/static/minitor/style2.css
+++ b/precios/static/minitor/style2.css
@@ -27,7 +27,7 @@ body {
   width: 695px;
   height: 94px;
   position: absolute;
-  left: calc(50% - 348px);
+  left: calc(50% - 525px);
   top: 92px;
   object-fit: cover;
 }
@@ -37,15 +37,27 @@ body {
   width: 1240px;
   height: 610px;
   position: absolute;
-  left: calc(50% - 620px);
+  left: calc(50% - 767px);
   top: 231px;
   box-shadow: 17px 9px 8px 0px rgba(0, 0, 0, 0.51);
+}
+.banner {
+  
+  width: 400px;
+  height: 500px;
+  position: absolute;
+  left: calc(50% - -516px);
+  top: 231px;
+  box-shadow: 17px 9px 8px 0px rgba(0, 0, 0, 0.51);
+}
+.img-banner{
+  width: 400px;
 }
 .rectangle-2 {
 
   
   position: absolute;
-  left: 62%;
+  left: 53%;
   top: 269px;
   z-index: 9991;
 }
@@ -60,7 +72,7 @@ input{
   width: 149px;
   height: 38px;
   position: absolute;
-  left: 62%;
+  left: 53%;
   top: 304px;
   object-fit: cover;
 }
@@ -71,7 +83,7 @@ input{
   font-size: 40px;
   font-weight: 700;
   position: absolute;
-  left: 21%;
+  left: 15%;
   top: 480px;
   width: 1044px;
   height: 146px;
@@ -83,7 +95,7 @@ input{
   font-size: 40px;
   font-weight: 400;
   position: absolute;
-  left: 16%;
+  left: 11%;
   top: 269px;
   width: 1044px;
   height: 91px;
@@ -95,7 +107,7 @@ input{
   font-size: 32px;
   font-weight: 700;
   position: absolute;
-  left: 26%;
+  left: 16%;
   top: 730px;
   width: 289px;
   height: 92px;
@@ -107,7 +119,7 @@ input{
   font-size: 20px;
   font-weight: 700;
   position: absolute;
-  left: 26%;
+  left: 16%;
   top: 696px;
   width: 309px;
   height: 23px;
@@ -119,7 +131,7 @@ input{
   font-size: 20px;
   font-weight: 700;
   position: absolute;
-  left: 27%;
+  left: 16%;
   top: 386px;
   width: 309px;
   height: 23px;
@@ -131,7 +143,7 @@ input{
   font-size: 20px;
   font-weight: 700;
   position: absolute;
-  left: 27%;
+  left: 16%;
   top: 416px;
   width: 309px;
   height: 23px;
@@ -145,7 +157,7 @@ input{
   width: 309px;
   height: 138px;
   position: absolute;
-  left: 26%;
+  left: 16%;
   top: 672px;
 }
 .bs-999-999-99 {
