--- a/precios/static/jf/css/main.css
+++ b/precios/static/jf/css/main.css
@@ -76,9 +76,17 @@ p {
   padding-left: 5%;
 }
 .marca{
-  margin-top: -15%;
+  margin-top: -24%;
 }
 
+.combo{
+  
+    color: #dc3545;
+    font-size: xx-large;
+    font-weight: 800;
+    font-family: sans-serif;
+    padding-top: 24%;
+}
 
 ul, li {
 	margin: 0px;
