--- a/precios/templates/administradores.html
+++ b/precios/templates/administradores.html
@@ -62,7 +62,7 @@
 												{% for administrador in administradores %}
 													<tr>
 														<td>{{ administrador.username }}</td>
-            											<td>{{ administrador.sucursal.nombre }}</td>
+            											<td>{{ administrador.sucursal_id.nombre }}</td>
 														
 													</tr>
 												{% endfor %}
