--- a/precios/templates/authentication/login.html
+++ b/precios/templates/authentication/login.html
@@ -58,7 +58,7 @@ License: For each use you must have a valid license purchased only from above li
 						</a>
 						<!--end::Logo-->
 						<!--begin::Title-->
-						<h2 class="text-white fw-normal m-0">ADMINISTRADOR PANTALLA DE PRECIOS</h2>
+						<h2 class="text-black fw-normal m-0">ADMINISTRADOR PANTALLA DE PRECIOS</h2>
 						<!--end::Title-->
 					</div>
 					<!--begin::Aside-->
