--- a/precios/templates/ofertafar.html
+++ b/precios/templates/ofertafar.html
@@ -43,7 +43,7 @@
     .precio {
       position: relative;
       position: relative;
-    padding-top: 0%;
+    padding-top: 28%;
     }
     
     .precio img {
@@ -72,6 +72,7 @@
     .precion{
         font-size: 4rem;
         font-family: fantasy;
+        font-weight: bold;
         padding-top: 0%;
         text-align: left;
         padding-left: 42%;
@@ -82,7 +83,7 @@
         text-align: center;
         line-height: 1.2;
         font-weight: 500;
-        padding-top: 20%;
+        padding-top: 3%;
         padding-left: 0%;
     }
   </style>
