--- a/precios/templates/precios_oferta.html
+++ b/precios/templates/precios_oferta.html
@@ -23,7 +23,7 @@
 										<!--begin::Heading-->
 										<div class="position-absolute text-white mb-8 ms-10 bottom-0">
 											<!--begin::Title-->
-											<h3 class="text-white fs-2qx fw-bold mb-3 m">Pantallas</h3>
+											<h3 class="text-white fs-2qx fw-bold mb-3 m">Ofertas</h3>
 											<!--end::Title-->
 											<!--begin::Text-->
 											<div class="fs-5 fw-semibold">Mostrando.</div>
