--- a/precios/templates/precios_oferta.html
+++ b/precios/templates/precios_oferta.html
@@ -41,6 +41,19 @@
 												</a>
 												<!--end::Link-->
 											</div>
+											<div class="card card-stretch">
+												<!--begin::Link-->
+												<a href="../../crear_combo/" class="btn btn-flex btn-text-gray-800 btn-icon-gray-400 btn-active-color-primary bg-body flex-column justfiy-content-start align-items-start text-start w-100 p-10">
+													<i class="ki-duotone ki-abstract-26 fs-2tx mb-5 ms-n1">
+														<span class="path1"></span>
+														<span class="path2"></span>
+														<span class="path3"></span>
+														<span class="path4"></span>
+													</i>
+													<span class="fs-4 fw-bold">Agregar Combos</span>
+												</a>
+												<!--end::Link-->
+											</div>
 											<!--end::Text-->
 										</div>
 										<!--end::Heading-->
