--- a/precios/templates/precios_oferta.html
+++ b/precios/templates/precios_oferta.html
@@ -23,12 +23,12 @@
 										<!--begin::Heading-->
 										<div class="position-absolute text-white mb-8 ms-10 bottom-0">
 											<!--begin::Title-->
-											<h3 class="text-white fs-2qx fw-bold mb-3 m">Ofertas</h3>
+											<h3 class="text-white fs-2qx fw-bold mb-3 m">{{ context.Ofertas2 }} Productos en Oferta</h3>
 											<!--end::Title-->
 											<!--begin::Text-->
 											<div class="fs-5 fw-semibold">Mostrando.</div>
 
-											<div class="card card-stretch">
+											<div class="card2 card card-stretch">
 												<!--begin::Link-->
 												<a href="../../crear_combo/" class="btn btn-flex btn-text-gray-800 btn-icon-gray-400 btn-active-color-primary bg-body flex-column justfiy-content-start align-items-start text-start w-100 p-10">
 													<i class="ki-duotone ki-abstract-26 fs-2tx mb-5 ms-n1">
@@ -41,16 +41,64 @@
 												</a>
 												<!--end::Link-->
 											</div>
-											<div class="card card-stretch">
+											<div class="card2 card3 card card-stretch">
 												<!--begin::Link-->
-												<a href="../../crear_combo/" class="btn btn-flex btn-text-gray-800 btn-icon-gray-400 btn-active-color-primary bg-body flex-column justfiy-content-start align-items-start text-start w-100 p-10">
-													<i class="ki-duotone ki-abstract-26 fs-2tx mb-5 ms-n1">
+												<a href="../../crear_combo/" class="btn77 btn-flex btn-text-white-800 btn-icon-white-400 btn-active-color-secundary bg-body2 flex-column justfiy-content-start align-items-start text-start w-100 p-10">
+													<i class="ki-duotone ki-glass fs-2tx mb-5 ms-n1">{{ context.Medicamentos }}
 														<span class="path1"></span>
 														<span class="path2"></span>
 														<span class="path3"></span>
 														<span class="path4"></span>
 													</i>
-													<span class="fs-4 fw-bold">Agregar Combos</span>
+													<span class="fs-4 fw-bold">Medicamentos</span>
+												</a>
+												<!--end::Link-->
+											</div>
+											<div class="card2 card3 card card-stretch">
+												<!--begin::Link-->
+												<a href="../../crear_combo/" class="btn77 btn-flex btn-text-white-800 btn-icon-white-400 btn-active-color-secundary bg-body2 flex-column justfiy-content-start align-items-start text-start w-100 p-10">
+													<i class="ki-duotone ki-syringe fs-2tx mb-5 ms-n1">{{ context.Insumos }}
+														<span class="path1"></span>
+														<span class="path2"></span>
+														<span class="path3"></span>
+													</i>
+													<span class="fs-4 fw-bold">Insumos M</span>
+												</a>
+												<!--end::Link-->
+											</div><div class="card2 card3 card card-stretch">
+												<!--begin::Link-->
+												<a href="../../crear_combo/" class="btn77 btn-flex btn-text-white-800 btn-icon-white-400 btn-active-color-secundary bg-body2 flex-column justfiy-content-start align-items-start text-start w-100 p-10">
+													<i class="ki-duotone ki-pulse fs-2tx mb-5 ms-n1">{{ context.Equipos }}
+														<span class="path1"></span>
+														<span class="path2"></span>
+													</i>
+													<span class="fs-4 fw-bold">Equipos M</span>
+												</a>
+												<!--end::Link-->
+											</div>
+											<div class="card2 card3 card card-stretch">
+												<!--begin::Link-->
+												<a href="../../crear_combo/" class="btn77 btn-flex btn-text-white-800 btn-icon-white-400 btn-active-color-secundary bg-body2 flex-column justfiy-content-start align-items-start text-start w-100 p-10">
+													<i class="ki-duotone ki-star fs-2tx mb-5 ms-n1">{{ context.Bellezas }}
+														<span class="path1"></span>
+														<span class="path2"></span>
+														<span class="path3"></span>
+														<span class="path4"></span>
+													</i>
+													<span class="fs-4 fw-bold">Belleza</span>
+												</a>
+												<!--end::Link-->
+											</div>
+											<div class="card2 card3 card card-stretch">
+												<!--begin::Link-->
+												<a href="../../crear_combo/" class="btn77 btn-flex btn-text-white-800 btn-icon-white-400 btn-active-color-secundary bg-body2 flex-column justfiy-content-start align-items-start text-start w-100 p-10">
+													<i class="ki-duotone ki-coffee fs-2tx mb-5 ms-n1">{{ context.Alimentos }}
+														<span class="path1"></span>
+														<span class="path2"></span>
+														<span class="path3"></span>
+														<span class="path4"></span>
+													</i>
+													<span class="fs-4 fw-bold">Alimentos</span>
 												</a>
 												<!--end::Link-->
 											</div>
