--- a/precios/templates/productos.html
+++ b/precios/templates/productos.html
@@ -51,7 +51,7 @@
 												</tr>
 												{% for producto in productos %}
 													<tr>
-														<td><a href="producto/{{ producto.codigo_id }}/">{{ producto.codigo }}</a></td>
+														<td><a href="../producto/{{ producto.id }}/">{{ producto.codigo }}</a></td>
 														<td>{{ producto.descripcion }}</td>
 														<td>{{ producto.pvp_base }} </td>
 														<td>{{ producto.existencia_total }} </td>
